--- a/src/pages/dyn/particle_kinematics.astro
+++ b/src/pages/dyn/particle_kinematics.astro
@@ -11,7 +11,15 @@ import RedText from "../../components/RedText.astro"
 <Section title="Particle Kinematics"></Section>
 
 <SubSection title="Position, velocity, acceleration">
-    <BlueText>Complete in  "Position, velocity, and acceleration"</BlueText>
+    <p>
+        The two basic geometric objects we are using are <a
+        href="rvp.html">positions</a> and <a
+        href="rvv.html">vectors</a>. Positions describe locations
+        in space, while vectors describe length and direction (no
+        position information). To describe the <em>kinematics</em>
+        (motion) of bodies we need to relate positions and vectors
+        to each other.
+    </p>
     <RedText>Add the table summary shown in Fig  \ref fig:PosVelAcce</RedText>
 
     <Image src="/Dynamics/ParticleKinematicsFigs/PosVelAcce.png" width="5"></Image>
