--- a/src/pages/dyn/particle_kinetics.astro
+++ b/src/pages/dyn/particle_kinetics.astro
@@ -6,12 +6,67 @@ import SubSection from "../../components/SubSection.astro"
 import SubSubSection from "../../components/SubSubSection.astro" 
 import BlueText from "../../components/BlueText.astro" 
 import RedText from "../../components/RedText.astro" 
+import InlineEquation from "../../components/InlineEquation.astro"
+import DisplayEquation from "../../components/DisplayEquation.astro"
+import CalloutContainer from "../../components/CalloutContainer.astro"
+import CalloutCard from "../../components/CalloutCard.astro"
 ---
 <Layout title="Particle Kinetics">
 <Section title="Particle Kinetics"></Section>
 
 <SubSection title="Classical mechanics">
-    <BlueText>Complete in "Kinetics of point masses"</BlueText>
+
+    <CalloutContainer slot="cards">
+        <CalloutCard>
+            <p>
+                If we have objects which are either very massive, very
+                small, or moving very fast, then Newton's equations do not
+                provide a good model of their motion. Instead we must use
+                Einstein's equations of <a
+                href="http://en.wikipedia.org/wiki/General_relativity">general
+                relativity</a> (for massive and fast objects) or the
+                equations of <a
+                href="http://en.wikipedia.org/wiki/Quantum_mechanics">quantum
+                mechanics</a> (for very small objects). Unfortunately,
+                these two theories cannot be used together, so we
+                currently have no good models for objects which are
+                simultaneously very small and very massive, such as <a
+                href="http://en.wikipedia.org/wiki/Micro_black_hole">micro
+                black holes</a> or the universe shortly after the <a
+                href="http://en.wikipedia.org/wiki/Big_Bang">big
+                bang</a>. Physicists are currently trying to reconcile
+                general relativity with quantum mechanics by devising a
+                new set of equations (sometimes called <a
+                href="http://en.wikipedia.org/wiki/Quantum_gravity">quantum
+                gravity</a> or a <a
+                href="http://en.wikipedia.org/wiki/Theory_of_everything">theory
+                of everything</a>). Current possibilities for new
+                equations include <a
+                href="http://en.wikipedia.org/wiki/String_theory">string
+                theory</a> and <a
+                href="http://en.wikipedia.org/wiki/Loop_quantum_gravity">loop
+                quantum gravity</a>, but none of these are generally
+                accepted yet.
+              </p>
+              <p>
+                It is important to remember that all of these different
+                equations are only models of reality and are not actually
+                real:
+              </p>
+              <blockquote>
+                “All models are wrong. Some models are useful.”
+                <br />
+                — <a href="http://en.wikipedia.org/wiki/George_E._P._Box">George Box</a>
+              </blockquote>
+        </CalloutCard>
+    </CalloutContainer>
+
+    Newton's equations relate the acceleration <InlineEquation equation="\\vec{a}" /> of a point mass with mass <InlineEquation equation="m" /> to the total applied force <InlineEquation equation="\\vec{F}" /> on the mass (sum of all applied forces). They are:
+    
+    <DisplayEquation equation="\\vec{F} = m\\vec{a}" background="True" title="Newton's equations: "/>
+
+    There is no derivation for Newton's equations, because they are an assumed model for dynamics. We can only verify them by comparing with experimental evidence, which confirms that Newtonian dynamics are accurate for non-relativistic and non-quantum systems.
+
 </SubSection>
 
 <SubSubSection title="Method of assumed forces and method of assumed motion">
