--- a/src/components/Section.astro
+++ b/src/components/Section.astro
@@ -3,7 +3,7 @@ const {title} = Astro.props;
 ---
 
 <div class="callout-grid mt-3">
-    <div class="w-100">
+    <div class="w-100 pe-2">
         <h1 class="fw-bold text-center" set:html={title}></h1>
 
         <slot />
