--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -23,6 +23,12 @@ const { title } = Astro.props;
 
 
 		<script src="/static/js/simplified_view.js" is:inline></script>
+		<script src="/jquery-2.1.4.min.js" is:inline></script>
+		<script src="/PrairieDraw.js" is:inline></script>
+		<script src="/PrairieGeom.js" is:inline></script>
+		<script src="/sha1.js" is:inline></script>
+		<script src="/sylvester.js" is:inline></script>
+
 		
 		<link rel="stylesheet" href="/static/css/main.css">
 		<link rel="stylesheet" href="/static/css/sidebar.css">
@@ -66,7 +72,7 @@ const { title } = Astro.props;
 
 	@media (min-width: 992px){
 		.callout-grid{
-			grid-template-columns: 10fr 3fr;
+			grid-template-columns: 20fr 7fr;
 		}
 	}
 </style>
