--- a/src/pages/dyn/vector_calculus.astro
+++ b/src/pages/dyn/vector_calculus.astro
@@ -6,6 +6,12 @@ import SubSection from "../../components/SubSection.astro"
 import SubSubSection from "../../components/SubSubSection.astro" 
 import BlueText from "../../components/BlueText.astro" 
 import RedText from "../../components/RedText.astro" 
+import DisplayEquation from "../../components/DisplayEquation.astro"
+import DisplayEquationCustom from "../../components/DisplayEquationCustom.astro"
+import PrairieDrawCanvas from "../../components/PrairieDrawCanvas.astro"
+import InlineEquation from "../../components/InlineEquation.astro"
+import Center from "../../components/Center.astro"
+import Warning from "../../components/Warning.astro"
 ---
 <Layout title="Vector Calculus">
 <Section title="Vector Calculus"></Section>
@@ -14,12 +20,264 @@ import RedText from "../../components/RedText.astro"
     <RedText>*This topic appears in 2 reference pages*</RedText>
     <BlueText>Complete in reference page "vector and bases"</BlueText>
     <BlueText>Explained in reference page "vector identities"</BlueText>
+
+    <p>
+        The <em>dot product</em> (also called the <em>inner
+        product</em> or <em>scalar product</em>) is defined by
+      </p>
+
+    <DisplayEquation equation="\\vec{a} \\cdot \\vec{b}= a_1 b_1 + a_2 b_2 + a_3 b_3" title="Dot product from components." background="True"/>
+
+    <p>
+        An alternative expression for the dot product can be
+        given in terms of the lengths of the vectors and the
+        angle between them:
+      </p>
+    
+    <DisplayEquation id="rvv-ed" title="Dot product from length/angle." background="True" equation="\\vec{a} \\cdot \\vec{b}= a b \\cos\\theta" derivation="True">
+
+        <p>
+            We will present a simple 2D proof here. A more complete proof in 3D uses the law of cosines.
+          </p>
+          <p>
+            Start with two vectors <InlineEquation equation="\\vec{a}" /> and <InlineEquation equation="\\vec{b}" /> with an
+            angle <InlineEquation equation="\\theta" /> between them, as shown below.
+          </p>
+          <PrairieDrawCanvas id="rvv-ed-c" width="400" height="400" />
+          <p>
+            Observe that the angle <InlineEquation equation="\\theta" /> between vectors
+            <InlineEquation equation="\\vec{a}" /> and <InlineEquation equation="\\vec{b}" /> is the difference between the
+            <button onclick="rvv_ed_c.toggleOption('angles');">angles</button>
+            <InlineEquation equation="\\theta_a" /> and <InlineEquation equation="\\theta_b" /> from horizontal.
+          </p>
+          <p>
+            If we use the angle sum formula for cosine, we have
+          </p>
+          
+            <DisplayEquation equation="\\begin{aligned} a b \\cos\\theta &amp;= a b            \\cos(\\theta_b - \\theta_a) \\\\ &amp;= a b (\\cos\\theta_b            \\cos\\theta_a + \\sin\\theta_b \\sin\\theta_a)            \\end{aligned}" />
+          
+          <p>
+            We now want to express the sine and cosine of <InlineEquation equation="\\theta_a" />
+            and <InlineEquation equation="\\theta_b" /> in terms of the <button
+            onclick="rvv_ed_c.toggleOption('components');">components</button>
+            of <InlineEquation equation="\\vec{a}" /> and <InlineEquation equation="\\vec{b}" />.
+          </p>
+          <p>
+            We re-arrange the expression so that we can use the fact
+            that <InlineEquation equation="a_1 = a \\cos\\theta_a" /> and <InlineEquation equation="a_2 = a \\sin\\theta_a" />,
+            and similarly for <InlineEquation equation="\\vec{b}" />. This gives:
+          </p>
+          
+            <DisplayEquation equation="\\begin{aligned} a b \\cos\\theta &amp;= (a \\cos\\theta_a)            (b \\cos\\theta_b) + (a \\sin\\theta_a) (b \\sin\\theta_b) \\\\            &amp;= a_1 b_1 + a_2 b_2 \\\\ &amp;= \\vec{a} \\cdot \\vec{b}            \\end{aligned}" />
+          
+    </DisplayEquation>
+
+    <p>
+      The fact that we can write the dot product <a
+      href="#rvv-es">in terms of components</a> as well as <a
+      href="#rvv-ed">in terms of lengths and angle</a> is very
+      helpful for calculating the length and angles of vectors
+      from the component representations.
+    </p>
+
+    <DisplayEquation id="rvv-el" title="Length and angle from dot product." background="True" equation="\\begin{aligned} a &amp;= \\sqrt{\\vec{a} \\cdot\\vec{a}} \\\\ \\cos\\theta &amp;= \\frac{\\vec{b}\\cdot \\vec{a}}{b a}\\end{aligned}" derivation="True">
+      <p>
+        The angle between <InlineEquation equation="\\vec{a}" /> and itself is $\theta = 0$,
+        so <InlineEquation equation="\\vec{a} \\cdot \\vec{a} = a^2 \\cos 0 = a^2" />, which
+        gives the first equation for the length in terms of the
+        dot product.
+      </p>
+      <p>
+        The second equation is a rearrangement of <a
+        href="#rvv-ed">#rvv-ed</a>.
+      </p>
+    </DisplayEquation>
+
+    <p>
+      If two vectors have zero dot product <InlineEquation equation="\\vec{a} \\cdot \\vec{b} = 0" /> then they have an angle of <InlineEquation equation="\\theta = 90^\\circ = \\frac{\\pi}{2}\\rm\\ rad" /> between them and we say that the
+      vectors are <em>perpendicular</em>, <em>orthogonal</em>, or
+      <em>normal</em> to each other.
+    </p>
+    <p>
+      In 2D we can easily find a perpendicular vector by rotating <InlineEquation equation="\\vec{a}" /> counterclockwise with the following equation.
+    </p>
+
+    <DisplayEquation id="rvv-en" title="Counterclockwise perpendicular vector in 2D." background="True" equation="\\vec{a}^\\perp = -a_2\\,\\hat\\imath + a_1\\hat\\jmath" derivation="True">
+      <p>
+        It is easy to check that <InlineEquation equation="\\vec{a}^\\perp" /> is always
+        perpendicular to <InlineEquation equation="\\vec{a}" />:
+
+        <DisplayEquation equation="\\vec{a} \\cdot \\vec{a}^\\perp        = (a_1\\,\\hat\\imath + a_2\\,\\hat\\jmath) \\cdot        (-a_2\\,\\hat\\imath + a_1\\hat\\jmath)        = -a_1 a_2 + a_2 a_1 = 0." />
+
+        The fact that <InlineEquation equation="\\vec{a}^\\perp" /> is a <InlineEquation equation="+90^\\circ" /> rotation
+        of <InlineEquation equation="\\vec{a}" /> is apparent from Figure <a
+        href="#rvv-fn">#rvv-fn</a>.
+      </p>
+    </DisplayEquation>
+
+    <p>
+      In 2D there are two perpendicular directions to a given
+      vector <InlineEquation equation="\\vec{a}" />, given by <InlineEquation equation="\\vec{a}^\\perp" /> and
+      <InlineEquation equation="-\\vec{a}^\\perp" />. In 3D there is are many perpendicular
+      vectors, and there is no simple formula like <a
+      href="#rvv-en">#rvv-en</a> for 3D.
+    </p>
+
+    <Center>
+      <PrairieDrawCanvas id="rvv-fn-c" width="400" height="300" class="figureImage">
+        <p class="controls">
+          <button class="anim-toggle:rvv-fn-c" onclick="rvv_fn_c.toggleAnim()">animate</button>
+          <button class="reset:rvv-fn-c" onclick="rvv_fn_c.reset()">reset</button>
+          <button class="option-toggle:rvv-fn-c:showComponents" onclick="rvv_fn_c.toggleOption('showComponents')">show components</button>
+        </p>
+        <p class="figureCaption">
+          The perpendicular vector <InlineEquation equation="\\vec{a}^\\perp" /> is always a
+          <InlineEquation equation="+90^\\circ" /> rotation of <InlineEquation equation="\\vec{a}" />.
+        </p>
+      </PrairieDrawCanvas>
+    </Center>
 </SubSection>
+
+<SubSubSection title="Dot product identities">
+  <DisplayEquation id="rvi-ed" title="Dot product symmetry." equation="\\vec{a} \\cdot \\vec{b} = \\vec{b} \\cdot \\vec{a}" background="true" derivation="true">
+    <p>
+      Using the coordinate expression <a
+      href="rvv.html#rvv-es">#rvv-es</a> gives:
+
+      <DisplayEquation equation="      \\vec{a} \\cdot \\vec{b}      = a_1 b_1 + a_2 b_2 + a_3 b_3      = b_1 a_1 + b_2 a_2 + b_3 a_3      = \\vec{b} \\cdot \\vec{a}." />
+    </p>
+  </DisplayEquation>
+
+  <DisplayEquation id="rvi-eg" title="Dot product vector length." equation="\\vec{a} \\cdot \\vec{a} = \\|a\\|^2" background="true" derivation="true">
+    <p>
+      Using the coordinate expression <a
+      href="rvv.html#rvv-es">#rvv-es</a> gives:
+
+      <DisplayEquation equation="      \\vec{a} \\cdot \\vec{a}      = a_1 a_1 + a_2 a_2 + a_3 a_3 = \\|a\\|^2." />
+    </p>
+  </DisplayEquation>
+
+  <DisplayEquation id="rvi-ei" title="Dot product bi-linearity." equation="\\begin{aligned} \\vec{a} \\cdot(\\vec{b} + \\vec{c}) &amp;=\\vec{a} \\cdot \\vec{b} + \\vec{a}\\cdot \\vec{c} \\\\ (\\vec{a} +\\vec{b}) \\cdot \\vec{c} &amp;=\\vec{a} \\cdot \\vec{c} + \\vec{b}\\cdot \\vec{c} \\\\ \\vec{a} \\cdot (\\beta\\vec{b}) &amp;= \\beta (\\vec{a} \\cdot\\vec{b}) = (\\beta \\vec{a}) \\cdot\\vec{b}\\end{aligned}" background="true" derivation="true">
+    <p>
+      Using the coordinate expression <a
+      href="rvv.html#rvv-es">#rvv-es</a> gives:
+
+      <DisplayEquation equation="\\begin{aligned}      \\vec{a} \\cdot (\\vec{b} + \\vec{c})      &amp;= a_1 (b_1 + c_1) + a_2 (b_2 + c_2) + a_3 (b_3 + c_3) \\\\      &amp;= (a_1 b_1 + a_2 b_2 + a_3 b_3) + (a_1 c_1 + a_2 c_2 + a_3 c_3) \\\\      &amp;= \\vec{a} \\cdot \\vec{b} + \\vec{a} \\cdot \\vec{c} \\\\      (\\vec{a} + \\vec{b}) \\cdot \\vec{c}      &amp;= (a_1 + b_1) c_1 + (a_2 + b_2) c_2 + (a_3 + b_3) c_3 \\\\      &amp;= (a_1 c_1 + a_2 c_2 + a_3 c_3) + (b_1 c_1 + a_2 c_2 + a_3 c_3) \\\\      &amp;= \\vec{a} \\cdot \\vec{c} + \\vec{b} \\cdot \\vec{c} \\\\      \\vec{a} \\cdot (\\beta \\vec{b})      &amp;= a_1 (\\beta b_1) + a_2 (\\beta b_2) + a_3 (\\beta b_3) \\\\      &amp;= \\beta (a_1 b_1 + a_2 b_2 + a_3 b_3) \\\\      &amp;= \\beta (\\vec{a} \\cdot \\vec{b}) \\\\      &amp;= (\\beta a_1) b_1 + (\\beta a_2) b_2 + (\\beta a_3) b_3 \\\\      &amp;= (\\beta \\vec{a}) \\cdot \\vec{b}.      \\end{aligned}" />
+    </p>
+  </DisplayEquation>
+</SubSubSection>
 
 <SubSection title="Cross product">
     <RedText>*This topic appears in 2 reference pages*</RedText>
     <BlueText>Complete in reference page "vector and bases"</BlueText>
     <BlueText>Explained in reference page "vector identities"</BlueText>
+
+    <p>
+      The cross product can be defined in terms of components by:
+    </p>
+
+    <DisplayEquation id="rvv-ex" title="Cross product in components." equation="\\vec{a} \\times \\vec{b}            = (a_2 b_3 - a_3 b_2) \\,\\hat{\\imath}            + (a_3 b_1 - a_1 b_3) \\,\\hat{\\jmath}            + (a_1 b_2 - a_2 b_1) \\,\\hat{k}" background="true" />
+
+    <p>
+      It is sometimes more convenient to work with cross products
+      of individual basis vectors, which are related as follows.
+    </p>
+
+    <DisplayEquationCustom id="rvv-eo" title="Cross products of basis vectors." background="True" derivation=True>
+      <Center>
+        <PrairieDrawCanvas id="rvv-eo-c" width="500" height="200" show_border="False" />
+      </Center>
+      <DisplayEquation equation="\\begin{aligned}\\hat\\imath \\times \\hat\\jmath &amp;= \\hat{k}&amp; \\hat\\jmath \\times \\hat{k} &amp;= \\hat\\imath&amp; \\hat{k} \\times \\hat\\imath &amp;= \\hat\\jmath \\\\\\hat\\jmath \\times \\hat\\imath &amp;= -\\hat{k}&amp; \\hat{k} \\times \\hat\\jmath &amp;= -\\hat\\imath&amp; \\hat\\imath \\times \\hat{k} &amp;= -\\hat\\jmath \\\\\\end{aligned}" />
+
+      <div slot="derivation">
+        <p>
+          Writing the basis vectors in terms of themselves gives the
+          components:
+
+          <DisplayEquation equation="\\begin{aligned}          i_1 &amp;= 1 &amp; i_2 &amp;= 0 &amp; i_3 &amp;= 0 \\\\          j_1 &amp;= 0 &amp; j_2 &amp;= 1 &amp; j_3 &amp;= 0 \\\\          k_1 &amp;= 0 &amp; k_2 &amp;= 0 &amp; k_3 &amp;= 1.          \\end{aligned}" />
+
+          These values can now be substituted into the definition <a
+          href="#rvv-ex">#rvv-ex</a>. For example,
+
+          <DisplayEquation equation="\\begin{aligned}          \\hat\\imath \\times \\hat\\jmath          &amp;= (i_2 j_3 - i_3 j_2) \\,\\hat{\\imath}          + (i_3 j_1 - i_1 j_3) \\,\\hat{\\jmath}          + (i_1 j_2 - i_2 j_1) \\,\\hat{k} \\\\          &amp;= (0 \\times 0 - 0 \\times 1) \\,\\hat{\\imath}          + (0 \\times 0 - 1 \\times 0) \\,\\hat{\\jmath}          + (1 \\times 1 - 0 \\times 0) \\,\\hat{k} \\\\          &amp;= \\hat{k}          \\end{aligned}" />
+
+          The other combinations can be computed similarly.
+        </p>
+      </div>
+    </DisplayEquationCustom>
+    
+    <Warning title="Warning: The cross product is not associative." id="rvv-wc">
+      <p>
+        The cross product is not <a
+        href="http://en.wikipedia.org/wiki/Associative_property">associative</a>,
+        meaning that in general
+
+        <DisplayEquation equation="\\vec{a} \\times (\\vec{b} \\times \\vec{c})        \\ne (\\vec{a} \\times \\vec{b}) \\times \\vec{c}." />
+
+        For example,
+
+        <DisplayEquation equation="\\begin{aligned}        \\hat{\\imath} \\times (\\hat{\\imath} \\times \\hat{\\jmath})        &amp;= \\hat{\\imath} \\times \\hat{k} = - \\hat{\\jmath} \\\\        (\\hat{\\imath} \\times \\hat{\\imath}) \\times \\hat{\\jmath}        &amp;= \\vec{0} \\times \\hat{\\jmath} = \\vec{0}.        \\end{aligned}" />
+
+        This means that we should never write an expression like
+
+        <DisplayEquation equation="\\vec{a} \\times \\vec{b} \\times \\vec{c}" />
+
+        because it is not clear in which order we should perform
+        the cross products. Instead, if we have more than one
+        cross product, we should always use parentheses to
+        indicate the order.
+      </p>
+    </Warning>
+
+    <p>
+      Rather than using components, the cross product can be
+      defined by specifying the length and direction of the
+      resulting vector. The direction of <InlineEquation equation="\\vec{a} \\times \\vec{b}" />
+      is orthogonal to both <InlineEquation equation="\\vec{a}" /> and <InlineEquation equation="\\vec{b}" />, with the
+      direction given by the right-hand rule. The magnitude of the
+      cross product is given by:
+    </p>
+
+    <DisplayEquation id="rvv-el2" title="Cross product length." equation="\\| \\vec{a} \\times \\vec{b} \\| = a b \\sin\\theta" background="true" derivation="true">
+      <p>
+        Using <a href="rvi.html#rvi-el">Lagrange's identity</a> we can calculate:
+
+        <DisplayEquation equation="\\begin{aligned}        \\| \\vec{a} \\times \\vec{b} \\|^2        &amp;= \\|\\vec{a}\\|^2 \\|\\vec{b}\\|^2        - (\\vec{a} \\cdot \\vec{b})^2 \\\\        &amp;= a^2 b^2 - (a b \\cos\\theta)^2 \\\\        &amp;= a^2 b^2 (1 - \\cos^2\\theta) \\\\        &amp;= a^2 b^2 \\sin^2\\theta.        \\end{aligned}" />
+
+        Taking the square root of this expression gives the
+        desired cross-product length formula.
+      </p>
+    </DisplayEquation>
+
+    <p>
+      This second form of the cross product definition can also be
+      related to the area of a parallelogram.
+    </p>
+    <Center>
+      <PrairieDrawCanvas id="rvv-fx-c" width="500" height="300">
+        <p>
+          The area of a parallelogram is the length of the base
+          multiplied by the perpendicular height, which is also the
+          magnitude of the cross product of the side vectors.
+        </p>
+      </PrairieDrawCanvas>
+    </Center>
+    <p>
+      A useful special case of the cross product occurs when
+      vector <InlineEquation equation="\\vec{a}" /> is in the 2D <InlineEquation equation="\\hat\\imath,\\hat\\jmath" /> plane
+      and the other vector is in the orthogonal <InlineEquation equation="\\hat{k}" />
+      direction. In this case the cross product rotates <InlineEquation equation="\\vec{a}" />
+      by <InlineEquation equation="90^\\circ" /> counterclockwise to give the perpendicular
+      vector <InlineEquation equation="\\vec{a}^\\perp" />, as follows.
+    </p>
+
+    <DisplayEquation id="rvv-e9" title="Cross product of out-of-plane vector \\( \\hat{k} \\) with 2D vector \\( \\vec{a} = a_1\\,\\hat\\imath + a_2\\,\\hat\\jmath \\)." equation="\\hat{k} \\times \\vec{a} = \\vec{a}^\\perp" background="true" derivation="true">
+      <p>
+        Using <a href="#rvv-eo">#rvv-eo</a> we can compute:
+
+        <DisplayEquation equation="\\begin{aligned}        \\hat{k} \\times \\vec{a}        &amp;= \\hat{k} \\times (a_1\\,\\hat\\imath + a_2\\,\\hat\\jmath) \\\\        &amp; a_1 (\\hat{k} \\times \\hat\\imath) + a_2 (\\hat{k} \\times \\hat\\jmath) \\\\        &amp;= a_1\\,\\hat\\jmath - a_2\\,\\hat\\imath \\\\        &amp;= \\vec{a}^\\perp.        \\end{aligned}" />
+      </p>
+    </DisplayEquation>
 </SubSection>
 
 <SubSection title="Derivatives"></SubSection>
@@ -82,3 +340,5 @@ import RedText from "../../components/RedText.astro"
     <Image src="/Dynamics/VectorCalculusFigures/SolvingEqns2.png" width="7"></Image>
 </SubSection>
 </Layout>
+
+<script src="/dyn/vector_calculus/canvases.js" is:inline></script>
