--- a/src/components/PrairieDrawCanvas.astro
+++ b/src/components/PrairieDrawCanvas.astro
@@ -1,5 +1,7 @@
 ---
 const {id, height, width, show_border="True"} = Astro.props;
+
+import Center from "./Center.astro";
 ---
 
 <style>
@@ -9,9 +11,11 @@ const {id, height, width, show_border="True"} = Astro.props;
     }
 </style>
 
-<div class="d-flex flex-column align-items-center" style=`width: ${width}px`>
+<div class="d-flex flex-column align-items-center w-100">
     <canvas id={id} height={height} width={width} class={show_border=='True' ? "canvas-container" : ''}></canvas>
-    <div>
-        <slot />
+    <div class="w-100">
+        <Center>
+            <slot />
+        </Center>
     </div>
 </div>
