--- a/src/pages/dyn/vector_calculus.astro
+++ b/src/pages/dyn/vector_calculus.astro
@@ -12,6 +12,9 @@ import PrairieDrawCanvas from "../../components/PrairieDrawCanvas.astro"
 import InlineEquation from "../../components/InlineEquation.astro"
 import Center from "../../components/Center.astro"
 import Warning from "../../components/Warning.astro"
+import Example from "../../components/Example.astro"
+import Row from "../../components/Row.astro"
+import Col from "../../components/Col.astro"
 ---
 <Layout title="Vector Calculus">
 <Section title="Vector Calculus"></Section>
@@ -318,13 +321,198 @@ import Warning from "../../components/Warning.astro"
   </DisplayEquation>
 </SubSubSection>
 
-<SubSection title="Derivatives"></SubSection>
+<SubSection title="Derivatives">
+
+  <p>
+    Time-dependent vectors can be differentiated in exactly
+    the same way that we differentiate scalar functions. For
+    a time-dependent vector <InlineEquation equation="\\vec{a}(t)" />, the
+    derivative <InlineEquation equation="\\dot{\\vec{a}}(t)" /> is:
+  </p>
+
+  <DisplayEquation id="rvc-ed" title="Vector derivative definition." background=True equation="\\begin{aligned} \\dot{\\vec{a}}(t)&amp;= \\frac{d}{dt} \\vec{a}(t) = \\lim_{\\Delta t\\to 0} \\frac{\\vec{a}(t + \\Delta t) -\\vec{a}(t)}{\\Delta t}\\end{aligned}" />
+
+  <p>
+    Note that vector derivatives are a purely geometric
+    concept. They don't rely on any basis or coordinates, but
+    are just defined in terms of the physical actions of adding
+    and scaling vectors.
+  </p>
+
+  <PrairieDrawCanvas id="rvc-fd-c" width="600" height="200">
+    <div style="width: 600px;">
+      <p class="controls">
+        <button class="reset:rvc-fd-c" onclick="rvc_fd_c.reset()">reset</button>
+        <button class="option-toggle:rvc-fd-c:showLabels" onclick="rvc_fd_c.toggleOption('showLabels')">labels</button>
+      </p>
+
+      <Row>
+        <Col values="12">
+          <div class="d-flex">
+            <p class="m-0 flex-shrink-1">Increment:<p>
+            <div class="flex-grow-1 d-flex align-items-baseline"> 
+              <input type="range" min="0" max="4" value="2" step="0.01" class="data-input:rvc-fd-c:dt flex-grow-1 mx-2" onchange="rvc_fd_c.setOption('dt', this.value); document.querySelector('span[class*=deltat]').innerText = this.value; console.log(this.value);" oninput="rvc_fd_c.setOption('dt', this.value); document.querySelector('span[class*=deltat]').innerText = this.value;"/>
+            \(\Delta t = \) <span class="data-option:rvc-fd-c:deltat mx-2" >2</span> s
+            </div>
+          </div>
+         
+        </Col>
+
+        <Col values="12">
+          <div class="d-flex flex-row flex-wrap">
+            <p class="me-2 my-0">Show:</p>
+            <button class="option-toggle:rvc-fd-c:showIncrement" onclick="rvc_fd_c.toggleOption('showIncrement');">vector increment <InlineEquation equation="\\Delta\\vec{a}" /></button>
+              <button class="option-toggle:rvc-fd-c:showApproxDeriv" onclick="rvc_fd_c.toggleOption('showApproxDeriv');">approximate derivative <InlineEquation equation="\\Delta\\vec{a} / \\Delta t" /></button>
+              <button class="option-toggle:rvc-fd-c:showExactDeriv" onclick="rvc_fd_c.toggleOption('showExactDeriv');">exact derivative <InlineEquation equation="\\dot{\\vec{a}}" /></button>
+          </div>
+          
+        </Col>
+
+        <Col values="12">
+          <div class="d-flex">
+            <p class="m-0 flex-shrink-1">Time:<p>
+            <div class="flex-grow-1 d-flex align-items-baseline"> 
+              <input type="range" min="0" max="10" value="0" step="0.01" class="data-input:rvc-fd-c:t flex-grow-1 mx-2" onchange="rvc_fd_c.setOption('t', this.value); document.querySelector('span[class*=t_step]').innerText = this.value;" oninput="rvc_fd_c.setOption('t', this.value); document.querySelector('span[class*=t_step]').innerText = this.value;"/>
+              \(t = \) <span class="data-option:rvc-fd-c:t_step mx-2"></span> s
+            </div>
+          </div>
+         
+        </Col>
+      </Row>
+      <p class="figureCaption mt-3">
+        Vector derivatives shown as functions of \(t\) and \(\Delta
+        t\). We can hold \(t\) fixed and vary \(\Delta t\) to see how
+        the approximate derivative <InlineEquation equation="\\Delta\\vec{a}/\\Delta t" />
+        approaches <InlineEquation equation="\\dot{\\vec{a}}" />. Alternatively, we can hold
+        \(\Delta t\) fixed and vary \(t\) to see how the approximation
+        changes depending on how <InlineEquation equation="\\vec{a}" /> is changing.
+      </p>
+  </div>
+
+  
+  </PrairieDrawCanvas>
+
+  <p>
+    We will use either the dot notation
+    <InlineEquation equation="\\dot{\\vec{a}}(t)" /> (also known as Newton notation) or the full derivative notation
+    <InlineEquation equation="\\frac{d\\vec{a}(t)}{dt}" /> (also known as Leibniz notation), depending on which is
+    clearer and more convenient. We will often not write the
+    time dependency explicitly, so we might write just
+    <InlineEquation equation="\\dot{\\vec{a}}" /> or <InlineEquation equation="\\frac{d\\vec{a}}{dt}" />. See below for more details.
+  </p>
+
+</SubSection>
+
+<SubSubSection title="Newton versus Leibniz Notation">
+  <p>
+    Most people know who Isaac Newton is, but perhaps fewer 
+    have heard of Gottfried Leibniz. Leibniz was a prolific 
+    mathematician and a contemporary of Newton.  Both of them 
+    claimed to have invented calculus independently of each 
+    other, and this became the source of a bitter rivalry 
+    between the two of them.  Each of them had different 
+    notation for derivatives, and both notations are commonly 
+    used today.
+  </p>
+  <p>
+    Leibniz notation is meant to be reminiscent of the 
+    definition of a derivative:
+  </p>
+  <p>
+    <DisplayEquation equation="\\frac{dy}{dt}=\\lim_{\\Delta t\\rightarrow0}\\frac{\\Delta y}{\\Delta t}." />
+  </p>
+  <p>
+    Newton notation is meant to be compact:
+  </p>
+  <p>
+    <DisplayEquation equation="\\dot{y} = \\frac{dy}{dt}." />
+  </p>
+  <p>
+    Note that a superscribed dot always denotes differentiation 
+    with respect to time \(t\).  A superscribed dot is never used 
+    to denote differentiation with respect to any other variable, 
+    such as \(x\).
+  </p>
+  <p>
+    But what about primes? A prime is used to denote differentiation 
+    with respect to a function's argument.  For example, suppose 
+    we have a function \(f=f(x)\).  Then
+  </p>
+  <p>
+    <DisplayEquation equation="f'(x) = \\frac{df}{dx}." />
+  </p>
+  <p>
+    Suppose we have another function \(g=g(s)\). Then
+  </p>
+  <p>
+    <DisplayEquation equation="g'(s) = \\frac{dg}{ds}." />s
+  </p>
+  <p>
+    As you can see, while a superscribed dot always denotes 
+    differentiation with respect to time \(t\), a prime can denote 
+    differentiation with respect to any variable; but that variable 
+    is always the function's argument.
+  </p>
+  <p>
+    Sometimes, for convenience, we drop the argument altogether.  So, 
+    if we know that \(y=y(x)\), then \(y'\) is understood to be the same 
+    as \(y'(x)\).  This is sloppy, but it is very common in practice.
+  </p>
+  <p>
+    Each notation has advantages and disadvantages.  The main advantage 
+    of Newton notation is that it is compact: it does not take a lot of 
+    effort to write a dot or a prime over a variable.  However, the price 
+    you pay for convenience is clarity.  The main advantage of Leibniz 
+    notation is that it is absolutely clear exactly which variable you are 
+    differentiating with respect to.  
+  </p>
+  <p>
+    Leibniz notation is also very convenient for remembering the chain rule.  
+    Consider the following examples of the chain rule in the two notations:
+  </p>
+  <p>
+    <DisplayEquation equation="\\begin{aligned}&amp;\\text{Newton:}&amp;\\dot{y}=y'(x)\\dot{x} \\\\      &amp;\\text{Leibniz:}&amp;\\frac{dy}{dt}=\\frac{dy}{dx}\\frac{dx}{dt}.\\end{aligned}" />
+  </p>
+  <p>
+    Notice how, with Leibniz notation, you can imagine the \(dx\)'s "cancelling 
+    out" on the right-hand side, leaving you with \(dy/dt\).
+  </p>
+</SubSubSection>
+
+<SubSection title="Derivatives and vector &quot;positions&quot;">
+
+  <p>
+    When thinking about vector derivatives, it is important to
+    remember that vectors <a href="rvv.html#rvv-fc">don't have
+    positions</a>. Even if a vector is drawn moving about, this
+    is irrelevant for the derivative.  Only changes to length
+    and direction are important.
+  </p>
+
+  <PrairieDrawCanvas id="rvc-fp-c" width="600" height="400">
+    <div style="width: 600px;">
+      <p class="controls">
+        <button class="reset:rvc-fp-c" onclick="rvc_fp_c.toggleAnim()">animate</button>
+        <button class="reset:rvc-fp-c" onclick="rvc_fp_c.reset()">reset</button>
+      </p>
+
+      <p class="controls">
+        Show:
+        <button class="option-toggle:rvc-fp-c:showVelocity0" onclick="rvc_fp_c.toggleOption('showVelocity0')">derivative at \(t = 0\)</button>
+        <button class="option-toggle:rvc-fp-c:showFixedBase"><InlineEquation equation="\\vec{a}(t)" onclick="rvc_fp_c.toggleOption('showFixedBase'); "/> with fixed base</button>
+        <button class="option-toggle:rvc-fp-c:showVelocity" onclick="rvc_fp_c.toggleOption('showVelocity'); rvc_fp_c.redraw();">derivative at current \(t\)</button>
+      </p>
+    </div>
+  </PrairieDrawCanvas>
+</SubSection>
 
 <SubSubSection title="Cartesian">
     <BlueText>Complete in reference page "vector calculus"</BlueText>
     <RedText>The example in Fig \ref Fig:CartesianDerivatives  could be added:</RedText>
 
     <Image src="/Dynamics/VectorCalculusFigures/Cartesian Derivatives.png" width="7"> Taken from L03-Notes, slide 6.</Image>
+
+    
 </SubSubSection>
     
 <SubSubSection title="Non-Cartesian: Polar basis">
@@ -357,6 +545,138 @@ import Warning from "../../components/Warning.astro"
 
 <SubSubSection title="Cartesian basis">
     <BlueText>Complete in "Vector calculus"</BlueText>
+
+    <p>
+      The Riemann-sum definition of the vector integral is:
+    </p>
+
+    <DisplayEquation id="rvc-ei" title="Vector integral." background="True" equation="\\int_0^t \\vec{a}(\\tau) \\, d\\tau= \\lim_{N \\to \\infty} \\underbrace{\\sum_{i=1}^N \\vec{a}(\\tau_i) \\Delta\\tau}_{\\vec{S}_N}\\qquad \\tau_i = \\frac{i - 1}{N}\\qquad \\Delta \\tau = \\frac{1}{N}     " />
+
+    <p>
+      In the above definition <InlineEquation equation="\\vec{S}_N" /> is the sum with \(N\)
+      intervals, written here using the left-hand edge <InlineEquation equation="\\tau_i" /> in
+      each interval.
+    </p>
+    <Center>
+      <PrairieDrawCanvas id="rvc-fi-c" width="600" height="400">
+        <div style="width: 600px;">
+        <p class="controls">
+          <button class="reset:rvc-fi-c" onclick="rvc_fi_c.reset()">reset</button>
+          <button class="option-toggle:rvc-fi-c:showLabels" onclick="rvc_fi_c.toggleOption('showLabels')">labels</button>
+        </p>
+
+        <Row>
+          <Col values="12">
+            <div class="d-flex">
+              <p class="m-0 flex-shrink-1">Time:<p>
+              <div class="flex-grow-1 d-flex align-items-baseline"> 
+                <input type="range" min="0" max="10" value="0" step="0.01" class="data-input:rvc-fi-c:t flex-grow-1 mx-2" onchange="rvc_fi_c.setOption('t', this.value); document.querySelector('span[class*=t]').innerText = this.value;" oninput="rvc_fi_c.setOption('t', this.value); document.querySelector('span[class*=t]').innerText = this.value;"/>
+              \(t = \) <span class="data-option:rvc-fi-c:t mx-2" >0</span> s
+              </div>
+            </div>
+           
+          </Col>
+
+          <Col values="12">
+            <div class="d-flex flex-row">
+              <p class="mx-2 my-0">Show:</p>
+              <button class="option-toggle:rvc-fi-c:showExact mx-2 py-0" onclick="rvc_fi_c.toggleOption('showExact')">integral of <InlineEquation equation="\\vec{a}(t)" /></button>
+              <button class="option-toggle:rvc-fi-c:showApprox mx-2 py-0" onclick="rvc_fi_c.toggleOption('showApprox')">approximate integral</button>
+            </div>
+            
+          </Col>
+
+          <Col values="12">
+            <div class="d-flex">
+              <p class="m-0 flex-shrink-1">Segments:<p>
+              <div class="flex-grow-1 d-flex align-items-baseline"> 
+                <input type="range" min="0" max="4.61" value="0" step="0.01" class="data-input:rvc-fi-c:logN flex-grow-1 mx-2" onchange="rvc_fi_c.setOption('logN', this.value); document.querySelector('span[class*=N]').innerText = Math.round(2.71543**this.value); console.log(this.value);" oninput="rvc_fi_c.setOption('logN', this.value); document.querySelector('span[class*=N]').innerText = Math.round(2.71543**this.value); console.log(this.value);"/>
+              \(N = \) <span class="data-option:rvc-fi-c:N mx-2">1</span>
+              </div>
+            </div>
+           
+          </Col>
+        </Row>
+      </div>
+
+      <p>
+        Integral of a vector function <InlineEquation equation="\\vec{a}(t)" />, together with
+            the approximation using a Riemann sum.
+      </p>
+      </PrairieDrawCanvas>
+    </Center>
+      <p>
+        Just like vector derivatives, vector integrals only use the
+        geometric concepts of scaling and addition, and do not rely
+        on using a basis. If we do write a vector function in terms
+        of a fixed basis, then we can integrate each component:
+      </p>
+
+      <DisplayEquation title="Vector integral in components." id="rvc-et" background="True" derivation="True" equation="\\int_0^t \\vec{a}(\\tau) \\, d\\tau= \\left( \\int_0^t a_1(\\tau) \\, d\\tau \\right) \\,\\hat\\imath+ \\left( \\int_0^t a_2(\\tau) \\, d\\tau \\right) \\,\\hat\\jmath+ \\left( \\int_0^t a_3(\\tau) \\, d\\tau \\right) \\,\\hat{k}">
+        <p>
+          Consider a time-dependent vector <InlineEquation equation="\\vec{a}(t)" /> written in
+          components with a fixed basis:
+
+          <DisplayEquation equation="\\vec{a}(t) = a_1(t) \\,\\hat\\imath + a_2(t) \\,\\hat\\jmath." />
+
+          Using the definition <a href="#rvc-ei">#rvc-ei</a> of
+          the vector integral gives:
+
+          <DisplayEquation equation="\\begin{aligned}\\int_0^t \\vec{a}(\\tau) \\, d\\tau&amp;= \\lim_{N \\to \\infty} \\sum_{i=1}^N\\vec{a}(\\tau_i) \\Delta\\tau \\\\&amp;= \\lim_{N \\to \\infty} \\sum_{i=1}^N\\left( a_1(\\tau_i) \\,\\hat\\imath+ a_2(\\tau_j) \\,\\hat\\jmath \\right) \\Delta\\tau \\\\&amp;= \\lim_{N \\to \\infty} \\left( \\sum_{i=1}^Na_1(\\tau_i) \\Delta\\tau \\,\\hat\\imath+ \\sum_{i=1}^N a_2(\\tau_j) \\Delta\\tau \\,\\hat\\jmath \\right) \\\\&amp;= \\left( \\lim_{N \\to \\infty} \\sum_{i=1}^Na_1(\\tau_i) \\Delta\\tau \\right) \\,\\hat\\imath+ \\left( \\lim_{N \\to \\infty}\\sum_{i=1}^N a_2(\\tau_j) \\Delta\\tau \\right) \\,\\hat\\jmath \\\\&amp;= \\left( \\int_0^t a_1(\\tau) \\, d\\tau \\right) \\,\\hat\\imath+ \\left( \\int_0^t a_2(\\tau) \\, d\\tau \\right) \\,\\hat\\jmath.\\end{aligned}" />
+
+          The second-to-last line used the Riemann-sum definition
+          of regular scalar integrals of <InlineEquation equation="a_1(t)" /> and <InlineEquation equation="a_2(t)" />.
+        </p>
+      </DisplayEquation>
+    
+      <Warning title="Integrating each component is only valid if the basis is fixed." id="rvc-wi">
+        <p>
+          Integrating a vector function by integrating each
+          component separately is only valid if the basis vectors
+          are not changing with time. If the basis vectors are
+          changing then we must either transform to a fixed basis
+          or otherwise take this change into account.
+        </p>
+      </Warning>
+
+      <Example title="Integrating a vector function." id="rvc-xi">
+        <p>
+          The vector <InlineEquation equation="\\vec{a}(t)" /> is given by
+
+          <DisplayEquation equation="\\vec{a}(t) = \\Big(2 \\sin(t + 1) + t^2 \\Big) \\,\\hat\\imath+ \\Big(3 - 3 \\cos(2t)\\Big) \\,\\hat\\jmath." />
+
+          What is <InlineEquation equation="\\int_0^t \\vec{a}(\\tau) \\, d\\tau" />?
+        </p>
+
+        <div slot="solution">
+          <p>
+            <DisplayEquation equation="\\begin{aligned}\\int_0^t \\vec{a}(\\tau) \\,d\\tau&amp;= \\left(\\int_0^t \\Big(2 \\sin(\\tau + 1) + \\tau^2 \\Big)\\,d\\tau\\right) \\,\\hat\\imath+ \\left(\\int_0^t \\Big(3 - 3 \\cos(2\\tau)\\Big)\\,d\\tau\\right) \\,\\hat\\jmath \\\\&amp;=\\left[-2 \\cos(\\tau + 1) + \\frac{\\tau^3}{3}\\right]_{\\tau=0}^{\\tau=t} \\,\\hat\\imath+ \\left[3 \\tau - \\frac{3}{2} \\sin(2\\tau)\\right]_{\\tau=0}^{\\tau=t} \\,\\hat\\jmath \\\\&amp;= \\left( -2\\cos(t + 1) + 2 \\cos(1)+ \\frac{t^3}{3}\\right)\\,\\hat\\imath+ \\left(3t - \\frac{3}{2} \\sin(2t)\\right)\\,\\hat\\jmath.\\end{aligned}" />
+          </p>
+        </div>
+      </Example>
+
+      <Warning title="The dummy variable of integration must be different to the limit variable." id="rvc-wd">
+        <p>
+          In the coordinate integral expression <a
+          href="#rvc-ei">#rvc-ei</a>, it is important that the
+          component expressions \(a_1(t)\), \(a_2(t)\) are re-written
+          with a different dummy variable such as \(\tau\) when
+          integrating. If we used $\tau$ for integration but kept
+          \(a_1(t)\) then we would obtain
+
+          <DisplayEquation equation="\\int_0^t a_1(t) \\,d\\tau= \\left[a_1(t) \\, \\tau\\right]_{\\tau = 0}^{\\tau = t}= a_1(t) \\, t,      " />
+
+          which is not what we mean by the integral.
+
+          Alternatively, if we leave everything as \(t\) then we
+          would obtain
+
+          <DisplayEquation equation="\\int_0^t a_1(t) \\,dt" />
+
+          which is a meaningless expression, as dummy variables
+          must only appear inside an integral.
+        </p>
+      </Warning>
 </SubSubSection>
 
 <SubSubSection title="Polar basis">
