--- a/src/pages/sol/axial_loading.astro
+++ b/src/pages/sol/axial_loading.astro
@@ -14,7 +14,7 @@ import DisplayEquation from "../../components/DisplayEquation.astro"
 
 <SubSection title="Notation and Convention">
 
-<Image src='/Solid_Mechanics/Axial Loading-Figures/Notation.png' width='3'><BlueText>Taken from TAM251 Lecture Notes - L4S4</BlueText></Image>
+<Image src='/mechref/Solid_Mechanics/Axial Loading-Figures/Notation.png' width='3'><BlueText>Taken from TAM251 Lecture Notes - L4S4</BlueText></Image>
 <BlueText>
 <ul>
     <li>   <strong>Displacement of points in space:</strong>  the movement of a point relative to its initial position in space (ex;  <InlineEquation equation='\\delta_B' /> )</li>
@@ -103,7 +103,7 @@ Superposition: If the displacements are (1) small and (2) linearly related to th
 
 <SubSection title="Statically Determinate Problems">
 
-<Image src='/Solid_Mechanics/Axial Loading-Figures/StaticallyDeterminate.png' width='3'> 
+<Image src='/mechref/Solid_Mechanics/Axial Loading-Figures/StaticallyDeterminate.png' width='3'> 
     <BlueText> Taken from TAM251 Lecture Notes - L4S9</BlueText>
 </Image>
 
@@ -113,7 +113,7 @@ Superposition: If the displacements are (1) small and (2) linearly related to th
 
 <SubSection title="Statically Indeterminate Problems">
 
-<Image src='/Solid_Mechanics/Axial Loading-Figures/StaticallyIndeterminate.png' width='3'>
+<Image src='/mechref/Solid_Mechanics/Axial Loading-Figures/StaticallyIndeterminate.png' width='3'>
     <BlueText>Taken from TAM251 Lecture Notes - L4S10</BlueText>
 </Image>
 
@@ -138,7 +138,7 @@ Superposition: If the displacements are (1) small and (2) linearly related to th
   <DisplayEquation equation='\\delta_{tot} = \\delta_{E} + \\delta_{T}\\' /> 
 </BlueText>
 
-<Image src='/Solid_Mechanics/Axial Loading-Figures/Temperature_NoLoad.png' width='3'><BlueText>Taken from TAM251 Lecture Notes - L4S17</BlueText></Image>
+<Image src='/mechref/Solid_Mechanics/Axial Loading-Figures/Temperature_NoLoad.png' width='3'><BlueText>Taken from TAM251 Lecture Notes - L4S17</BlueText></Image>
 
  A rod rests freely on a smooth horizontal surface. Temperature of the rod is raised by <InlineEquation equation='\\Delta T' />. Rod elongates by an amount.
 
@@ -148,7 +148,7 @@ Superposition: If the displacements are (1) small and (2) linearly related to th
 
 <DisplayEquation equation='\\varepsilon_{T} = \\frac{\\delta_T}{L} = \\alpha T\\' />
 
-<Image src='/Solid_Mechanics/Axial Loading-Figures/Temperature_TwoPlates.png' width='2'>  
+<Image src='/mechref/Solid_Mechanics/Axial Loading-Figures/Temperature_TwoPlates.png' width='2'>  
     <BlueText>Taken from TAM251 Lecture Notes - L4S17</BlueText>
 </Image>
 
